--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
             <button onclick="subimeter()">Cadastrar</button>
         </form>
-
+        <script src="main.js"></script>
     </div>
     
 </body>
