--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div>
-        <form>
+        <form id="formulario">
             
             <p>
                 <label for="nome_completo">Nome:</label>
@@ -126,9 +126,12 @@
                 <input type="" name="" id="">
             </p>
 
-            <button onclick="subimeter()">Cadastrar</button>
+            <button id="botao-cadastrar">Cadastrar</button>
         </form>
         <script src="main.js"></script>
+        <script>
+            main();
+        </script>
     </div>
     
 </body>
