All form elements added

--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
                 <label for="naturalidade">Naturalidade:</label>
                 <input type="text" name="naturalidade" id="naturalidade" class="campo">
 
-                <label for="estados-brasil">Estado:</label>
-                <select name="estados-brasil" class="campo">
-                    <option value="0">selecione--</option>
+                <label for="estados">Estado:</label>
+                <select name="estados" class="campo">
+                    <option value="">selecione--</option>
                     <option value="ac">Acre</option>
                     <option value="al">Alagoas</option>
                     <option value="ap">Amapá</option>
@@ -116,16 +116,64 @@
             </p>
 
             <p>
-                <!--Trocar para o campo correto-->
-                <label for="contato">Contato (tel/cel)</label>
-                <input type="text" name="contato" id="contato" class="campo">
+                <label for="endereco">Endereco (tel/cel)</label>
+                <input type="text" name="endereco" id="endereco" class="campo">
             </p>
 
             <p>
-                <!--Trocar para o campo correto-->
-                <label for=""><label>
-                <input type="" name="" id="" class="campo">
+                <label for="numero">Número<label>
+                <input type="texto" name="numero" id="numero" class="campo">
             </p>
+
+            <p>
+                <label for="complemento">Complemento<label>
+                <input type="texto" name="complemento" id="complemento" class="campo">
+            </p>
+            
+            <p>
+                <label for="bairro">Bairro<label>
+                <input type="texto" name="bairro" id="bairro" class="campo">
+            </p>
+            <p>
+                <label for="cep">CEP<label>
+                <input type="texto" name="cep" id="cep" class="campo">
+            </p>
+                <label for="cidade">Cidade<label>
+                <input type="texto" name="cidade" id="cidade" class="campo">
+            <p>
+                <label for="estados">Estado:</label>
+                <select name="estados" class="campo">
+                    <option value="">selecione--</option>
+                    <option value="ac">Acre</option>
+                    <option value="al">Alagoas</option>
+                    <option value="ap">Amapá</option>
+                    <option value="am">Amazonas</option>
+                    <option value="ba">Bahia</option>
+                    <option value="ce">Ceará</option>
+                    <option value="df">Distrito Federal</option>
+                    <option value="es">Espírito Santo</option>
+                    <option value="go">Goiás</option>
+                    <option value="ma">Maranhão</option>
+                    <option value="mt">Mato Grosso</option>
+                    <option value="ms">Mato Grosso do Sul</option>
+                    <option value="mg">Minas Gerais</option>
+                    <option value="pa">Pará</option>
+                    <option value="pb">Paraíba</option>
+                    <option value="pr">Paraná</option>
+                    <option value="pe">Pernambuco</option>
+                    <option value="pi">Piauí</option>
+                    <option value="rj">Rio de Janeiro</option>
+                    <option value="rn">Rio Grande do Norte</option>
+                    <option value="rs">Rio Grande do Sul</option>
+                    <option value="ro">Rondônia</option>
+                    <option value="rr">Roraima</option>
+                    <option value="sc">Santa Catarina</option>
+                    <option value="sp">São Paulo</option>
+                    <option value="se">Sergipe</option>
+                    <option value="to">Tocantins</option>
+                </select>
+            </p>
+
 
         </form>
         <button id="botao-cadastrar">Cadastrar</button>
