--- a/index.html
+++ b/index.html
@@ -121,24 +121,24 @@
             </p>
 
             <p>
-                <label for="numero">Número<label>
+                <label for="numero">Número</label>
                 <input type="texto" name="numero" id="numero" class="campo">
             </p>
 
             <p>
-                <label for="complemento">Complemento<label>
+                <label for="complemento">Complemento</label>
                 <input type="texto" name="complemento" id="complemento" class="campo">
             </p>
             
             <p>
-                <label for="bairro">Bairro<label>
+                <label for="bairro">Bairro</label>
                 <input type="texto" name="bairro" id="bairro" class="campo">
             </p>
             <p>
-                <label for="cep">CEP<label>
+                <label for="cep">CEP</label>
                 <input type="texto" name="cep" id="cep" class="campo">
             </p>
-                <label for="cidade">Cidade<label>
+                <label for="cidade">Cidade</label>
                 <input type="texto" name="cidade" id="cidade" class="campo">
             <p>
                 <label for="estados">Estado:</label>
