--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
                 </select>                
             
                 <label for="peso">Peso (Kg):</label>                
-                <input type="text" name="peso" id="peso" class="campo" class="campoNumerico"> 
+                <input type="text" name="peso" id="peso" class="campo"> 
                 
 
                 <label for="altura">Altura</label>
-                <input type="text" name="altura" id="altura" class="campo" class="campoNumerico">
+                <input type="text" name="altura" id="altura" class="campo">
 
                 <label for="cor">Cor:</label>
                 <select name="cor" id="cor" class="campo">                    
@@ -53,10 +53,10 @@
 
             <p>
                 <label for="rg">RG</label>
-                <input type="text" name="rg" id="rg" class="campo" class="campoNumerico">
+                <input type="text" name="rg" id="rg" class="campo">
 
                 <label for="cpf">CPF</label>
-                <input type="text" name="cpf" id="cpf" class="campo" class="campoNumerico">
+                <input type="text" name="cpf" id="cpf" class="campo">
 
                 <label for="estado_civil">Estado Civil:</label>
                 <input type="text" name="estado_civil" id="estado_civil" class="campo">
@@ -122,7 +122,7 @@
 
             <p>
                 <label for="numero">Número</label>
-                <input type="texto" name="numero" id="numero" class="campo" class="campoNumerico">
+                <input type="texto" name="numero" id="numero" class="campo">
             </p>
 
             <p>
@@ -136,7 +136,7 @@
             </p>
             <p>
                 <label for="cep">CEP</label>
-                <input type="texto" name="cep" id="cep" class="campo" class="campoNumerico">
+                <input type="texto" name="cep" id="cep" class="campo">
             </p>
                 <label for="cidade">Cidade</label>
                 <input type="texto" name="cidade" id="cidade" class="campo">
