--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/components/css/index/style.css">
     <title>Document</title>
 </head>
 <body>
@@ -175,7 +175,7 @@
             </p>
         </form>
         <button id="botao-cadastrar">Cadastrar</button>
-        <script src="main.js"></script>
+        <script src="/components/js/index/main.js"></script>
         <script>
             main();
         </script>
