Adjustments to the form

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <input type="text" name="naturalidade" id="naturalidade" class="campo">
 
                 <label for="estados">Estado:</label>
-                <select name="estados" class="campo">
+                <select name="estados_nascenca" class="campo">
                     <option value="">selecione--</option>
                     <option value="ac">Acre</option>
                     <option value="al">Alagoas</option>
@@ -142,7 +142,7 @@
                 <input type="texto" name="cidade" id="cidade" class="campo">
             <p>
                 <label for="estados">Estado:</label>
-                <select name="estados" class="campo">
+                <select name="estados_moradia" class="campo">
                     <option value="">selecione--</option>
                     <option value="ac">Acre</option>
                     <option value="al">Alagoas</option>
