Added new import scripts

--- a/index.html
+++ b/index.html
@@ -176,6 +176,8 @@
         </form>
         <button id="botao-cadastrar">Cadastrar</button>
         <script src="/components/js/index/main.js"></script>
+        <script src="/components/js/index/listeners.js"></script>
+        <script src="/components/js/index/validacoes.js"></script>
         <script>
             main();
         </script>
