--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
             <p>
                 <label for="rg">RG</label>
-                <input type="text" name="rg" id="rg" class="campoNumerico">
+                <input type="text" name="rg" id="rg" class="campo">
 
                 <label for="cpf">CPF</label>
                 <input type="text" name="cpf" id="cpf" class="campoNumerico">
