Added maxlength for field CPF

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <input type="text" name="rg" id="rg" class="campo">
 
                 <label for="cpf">CPF</label>
-                <input type="text" name="cpf" id="cpf" class="campoNumerico">
+                <input type="text" name="cpf" id="cpf" class="campoNumerico" maxlength="14">
 
                 <label for="estado_civil">Estado Civil:</label>
                 <input type="text" name="estado_civil" id="estado_civil" class="campo">
