Class campoNumerico added for Contato field

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
             <p>
                 <label for="contato">Contato (tel/cel)</label>
-                <input type="text" name="contato" id="contato" class="campo">
+                <input type="text" name="contato" id="contato" class="campoNumerico">
             </p>
 
             <p>
