Main.js for second form added

--- a/questionario.html
+++ b/questionario.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <div class="conteiner">
-        <form>
+        <form id="formulario">
             <p>
                 <label for="nome_completo">Nome:</label>
                 <input type="text" name="nome_completo" id="nome_completo" class="campo">
@@ -26,156 +26,156 @@
                 <ol>
                     <li>
                         <label for="hemorragia">Já teve hemorragia?</label>
-                        <input type="radio" value="positivo" name="resposta_hemorragia">
-                        <label for="positivo">Sim</label>
-                        <input type="radio" value="negativo" name="resposta_hemorragia">
-                        <label for="negativo">Não</label>
+                        <input type="radio" value="true" name="resposta_hemorragia">
+                        <label for="true">Sim</label>
+                        <input type="radio" value="false" name="resposta_hemorragia">
+                        <label for="false">Não</label>
                     </li>
                     <li>
                         <label for="alergia">Já sofreu alergia?</label>
-                        <input type="radio" value="positivo" name="resposta_alergia">
-                        <label for="positivo">Sim</label>
-                        <input type="radio" value="negativo" name="resposta_alergia">
-                        <label for="negativo">Não</label>
+                        <input type="radio" value="true" name="resposta_alergia">
+                        <label for="true">Sim</label>
+                        <input type="radio" value="false" name="resposta_alergia">
+                        <label for="false">Não</label>
                     </li>
                     <li>
                         <label for="reumatismo">Já teve reumatismo infeccioso?</label>
-                        <input type="radio" value="positivo" name="resposta_reumatismo">
-                        <label for="positivo">Sim</label>
-                        <input type="radio" value="negativo" name="resposta_reumatismo">
-                        <label for="negativo">Não</label>
+                        <input type="radio" value="true" name="resposta_reumatismo">
+                        <label for="true">Sim</label>
+                        <input type="radio" value="false" name="resposta_reumatismo">
+                        <label for="false">Não</label>
                     </li>
                     <li>
                         <label for="cardiovascular">Sofre(u) de distúrbio cardiovascular?</label>
-                        <input type="radio" value="positivo" name="resposta_cardiovascular">
-                        <label for="positivo">Sim</label>
-                        <input type="radio" value="negativo" name="resposta_cardiovascular">
-                        <label for="negativo">Não</label>
+                        <input type="radio" value="true" name="resposta_cardiovascular">
+                        <label for="true">Sim</label>
+                        <input type="radio" value="false" name="resposta_cardiovascular">
+                        <label for="false">Não</label>
                     </li>
                     <li>
                         <label for="gastrite">Sofre(u) de gastrite?</label>
-                        <input type="radio" value="positivo" name="resposta_gastrite">
-                        <label for="positivo">Sim</label>
-                        <input type="radio" value="negativo" name="resposta_gastrite">
-                        <label for="negativo">Não</label>
+                        <input type="radio" value="true" name="resposta_gastrite">
+                        <label for="true">Sim</label>
+                        <input type="radio" value="false" name="resposta_gastrite">
+                        <label for="false">Não</label>
                     </li>
                     <li>
                         <label for="diabetico">É diabético ou tem familiares diabéticos?</label>
-                        <input type="radio" value="positivo" name="resposta_diabetico">
-                        <label for="positivo">Sim</label>
-                        <input type="radio" value="negativo" name="resposta_diabetico">
-                        <label for="negativo">Não</label>
+                        <input type="radio" value="true" name="resposta_diabetico">
+                        <label for="true">Sim</label>
+                        <input type="radio" value="false" name="resposta_diabetico">
+                        <label for="false">Não</label>
                     </li>
                     <li>
                         <label for="desmaio">Já desmaiou alguma vez?</label>
-                        <input type="radio" value="positivo" name="resposta_desmaio">
-                        <label for="positivo">Sim</label>
-                        <input type="radio" value="negativo" name="resposta_desmaio">
-                        <label for="negativo">Não</label>
+                        <input type="radio" value="true" name="resposta_desmaio">
+                        <label for="true">Sim</label>
+                        <input type="radio" value="false" name="resposta_desmaio">
+                        <label for="false">Não</label>
                     </li>
                     <li>
                         <label for="tratamento">Está sob tratamento médico?</label>
-                        <input type="radio" value="positivo" name="resposta_tratamento">
-                        <label for="positivo">Sim</label>
-                        <input type="radio" value="negativo" name="resposta_tratamento">
-                        <label for="negativo">Não</label>
+                        <input type="radio" value="true" name="resposta_tratamento">
+                        <label for="true">Sim</label>
+                        <input type="radio" value="false" name="resposta_tratamento">
+                        <label for="false">Não</label>
                     </li>
 
                     <li>
                         <label for="medicamento">Está tomando algum medicamento?</label>
-                        <input type="radio" value="positivo" name="resposta_medicamento">
-                        <label for="positivo">Sim</label>
-                        <input type="radio" value="negativo" name="resposta_medicamento">
-                        <label for="negativo">Não</label>
+                        <input type="radio" value="true" name="resposta_medicamento">
+                        <label for="true">Sim</label>
+                        <input type="radio" value="false" name="resposta_medicamento">
+                        <label for="false">Não</label>
                     </li>
                     <li>
                         <label for="operacao">Esteve doente ou foi operado nos últimos 5 anos?</label>
-                        <input type="radio" value="positivo" name="resposta_operacao">
-                        <label for="positivo">Sim</label>
-                        <input type="radio" value="negativo" name="resposta_operacao">
-                        <label for="negativo">Não</label>
+                        <input type="radio" value="true" name="resposta_operacao">
+                        <label for="true">Sim</label>
+                        <input type="radio" value="false" name="resposta_operacao">
+                        <label for="false">Não</label>
                     </li>
                     <li>
                         <label for="manias">Tem hábitos, vícios ou manias?</label>
-                        <input type="radio" value="positivo" name="resposta_manias">
-                        <label for="positivo">Sim</label>
-                        <input type="radio" value="negativo" name="resposta_manias">
-                        <label for="negativo">Não</label>
+                        <input type="radio" value="true" name="resposta_manias">
+                        <label for="true">Sim</label>
+                        <input type="radio" value="false" name="resposta_manias">
+                        <label for="false">Não</label>
                     </li>
                     <li>
                         <label for="depressão">Tem ansiedade/depressão?</label>
-                        <input type="radio" value="positivo" name="resposta_depressao">
-                        <label for="positivo">Sim</label>
-                        <input type="radio" value="negativo" name="resposta_depressao">
-                        <label for="negativo">Não</label>
+                        <input type="radio" value="true" name="resposta_depressao">
+                        <label for="true">Sim</label>
+                        <input type="radio" value="false" name="resposta_depressao">
+                        <label for="false">Não</label>
                     </li>
                     <li>
                         <label for="doencas">Você e/ou algum familiar teve alguma(s) dessas doenças</label>
                         <ul>
                             <li>
                                 <label for="tuberculose">Tuberculose</label>
-                                <input type="radio" value="positivo" name="resposta_tuberculose">
-                                <label for="positivo">Sim</label>
-                                <input type="radio" value="negativo" name="resposta_tuberculose">
-                                <label for="negativo">Não</label>
+                                <input type="radio" value="true" name="resposta_tuberculose">
+                                <label for="true">Sim</label>
+                                <input type="radio" value="false" name="resposta_tuberculose">
+                                <label for="false">Não</label>
                             </li>
                             <li>
                                 <label for="sarampo">Sarampo</label>
-                                <input type="radio" value="positivo" name="resposta_sarampo">
-                                <label for="positivo">Sim</label>
-                                <input type="radio" value="negativo" name="resposta_sarampo">
-                                <label for="negativo">Não</label>
+                                <input type="radio" value="true" name="resposta_sarampo">
+                                <label for="true">Sim</label>
+                                <input type="radio" value="false" name="resposta_sarampo">
+                                <label for="false">Não</label>
                             </li>
                             <li>
                                 <label for="sifilis">Sífilis</label>
-                                <input type="radio" value="positivo" name="resposta_sifilis">
-                                <label for="positivo">Sim</label>
-                                <input type="radio" value="negativo" name="resposta_sifilis">
-                                <label for="negativo">Não</label>
+                                <input type="radio" value="true" name="resposta_sifilis">
+                                <label for="true">Sim</label>
+                                <input type="radio" value="false" name="resposta_sifilis">
+                                <label for="false">Não</label>
                             </li>
                             <li>
                                 <label for="caxumba">Caxumba</label>
-                                <input type="radio" value="positivo" name="resposta_caxumba">
-                                <label for="positivo">Sim</label>
-                                <input type="radio" value="negativo" name="resposta_caxumba">
-                                <label for="negativo">Não</label>
+                                <input type="radio" value="true" name="resposta_caxumba">
+                                <label for="true">Sim</label>
+                                <input type="radio" value="false" name="resposta_caxumba">
+                                <label for="false">Não</label>
                             </li>
                             <li>
                                 <label for="hepatite">Hepatite, A, B, C</label>
-                                <input type="radio" value="positivo" name="resposta_hepatite">
-                                <label for="positivo">Sim</label>
-                                <input type="radio" value="negativo" name="resposta_hepatite">
-                                <label for="negativo">Não</label>
+                                <input type="radio" value="true" name="resposta_hepatite">
+                                <label for="true">Sim</label>
+                                <input type="radio" value="false" name="resposta_hepatite">
+                                <label for="false">Não</label>
                             </li>
                             <li>
                                 <label for="varicela">Varicela</label>
-                                <input type="radio" value="positivo" name="resposta_varicela">
-                                <label for="positivo">Sim</label>
-                                <input type="radio" value="negativo" name="resposta_varicela">
-                                <label for="negativo">Não</label>
+                                <input type="radio" value="true" name="resposta_varicela">
+                                <label for="true">Sim</label>
+                                <input type="radio" value="false" name="resposta_varicela">
+                                <label for="false">Não</label>
                             </li>
                             <li>
                                 <label for="aids">AIDS</label>
-                                <input type="radio" value="positivo" name="resposta_aids">
-                                <label for="positivo">Sim</label>
-                                <input type="radio" value="negativo" name="resposta_aids">
-                                <label for="negativo">Não</label>
+                                <input type="radio" value="true" name="resposta_aids">
+                                <label for="true">Sim</label>
+                                <input type="radio" value="false" name="resposta_aids">
+                                <label for="false">Não</label>
                             </li>
                             <li>
                                 <label for="outra">Outra</label>
                                 <input type="text" name="outra" id="outra">
-                                <input type="radio" value="positivo" name="resposta_sarampo">
-                                <label for="positivo">Sim</label>
-                                <input type="radio" value="negativo" name="resposta_sarampo">
-                                <label for="negativo">Não</label>
+                                <input type="radio" value="true" name="resposta_sarampo">
+                                <label for="true">Sim</label>
+                                <input type="radio" value="false" name="resposta_sarampo">
+                                <label for="false">Não</label>
                             </li>
                         </ul>
                         <li>
                             <label for="fumante">É fumante?</label>
-                            <input type="radio" value="positivo" name="resposta_fumante">
-                            <label for="positivo">Sim</label>
-                            <input type="radio" value="negativo" name="resposta_fumante">
-                            <label for="negativo">Não</label>
+                            <input type="radio" value="true" name="resposta_fumante">
+                            <label for="true">Sim</label>
+                            <input type="radio" value="false" name="resposta_fumante">
+                            <label for="false">Não</label>
                             <label for="frequencia">Frequência por dia:</label>
                             <input type="text" name="frequencia" id="frequencia">
                         </li>
@@ -185,6 +185,7 @@
             </p>
         </form>
     </div>
-    
+    <script src="/mainQuestionario.js"></script>
+    <script>main()</script>
 </body>
 </html>
