--- a/questionario.html
+++ b/questionario.html
@@ -176,8 +176,10 @@
                             <label for="true">Sim</label>
                             <input type="radio" value="false" name="resposta_fumante">
                             <label for="false">Não</label>
-                            <label for="frequencia">Frequência por dia:</label>
-                            <input type="text" name="frequencia" id="frequencia">
+                            <div id="frequencia" style="display: none;">
+                                <label for="frequencia">Frequência por dia:</label>
+                                <input type="text" name="frequencia" id="frequencia">
+                            </div>
                         </li>
                     </li>
 
