--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
                 </select>
             </p>
         </form>
+        <button id="botao-cadastrar">Cadastrar</button>
         <form>
             <p>
                 <input type="date" name="data_atual">
@@ -324,10 +325,10 @@
             </p>
         </form>
 
-        <button id="botao-cadastrar">Cadastrar</button>
         <script src="/components/js/index/main.js"></script>
         <script src="/components/js/index/listeners.js"></script>
         <script src="/components/js/index/validacoes.js"></script>
+        <script src="/components/js/index/paciente.js"></script>
         <script>
             main();
         </script>
